# asisjwk

2024_ansible_db_practice/: README.md
2026/: linux_command_docker.md  topcpu_jvm_thread_dump_jps.sh  topcpu_jvm_thread_dump_pgrep.sh
2026_argocd2to3/: README.md  cleanup.sh  run-all.sh
2026_argocd2to3/1_v2.14_original/: application.yaml  appproject.yaml  argocd-cm.yaml  argocd-rbac-cm.yaml  install.sh
2026_argocd2to3/2_v2.14_migration_ready/: application.yaml  appproject.yaml  argocd-cm.yaml  argocd-rbac-cm.yaml  install.sh  repo-secret.yaml
2026_argocd2to3/3_v3.3_final/: application.yaml  appproject.yaml  argocd-cm.yaml  argocd-rbac-cm.yaml  install.sh  repo-secret.yaml
2026_argocd2to3/sample-app/: configmap.yaml  deployment.yaml  service.yaml
2026_cgroups_resource/: Dockerfile  docker-compose.yml  read_cpu_weight.sh  run_stress.py  run_stress_low_only.py  tasks.py
2026_localtube_streaming/: .gitignore  README.md  pyproject.toml
2026_localtube_streaming/app/: __init__.py  main.py  streaming.py
2026_localtube_streaming/app/static/: app.js  style.css
2026_localtube_streaming/app/templates/: index.html  watch.html
2026_localtube_streaming/docs/: design.md
2026_localtube_streaming/docs/process_journal/: 00_plan.md  01_bootstrap.md  02_streaming_core.md  03_web_ui.md  04_validation.md
2026_localtube_streaming/tests/: test_streaming.py
2026_signal_celery/: Dockerfile  docker-compose.yml  force_hang.py  tasks.py
2026_systemd_dep/: Dockerfile  my-app.service  my-nginx.service
2026_zookeepr/: agent.py  docker-compose.yml  restart.yaml
